--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
         <script type="module" src="./new.js"></script>
+        <script type="module" src="./properties.json"></script>
+        <script type="module" src="./users.json"></script>
+
         <!-- <script type="module" src="./node_modules/sqlite3"></script> -->
 
         <!-- Bootstrap CSS -->
@@ -59,13 +62,19 @@
 
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
+                          <label class="input-group-text" for="user" >select user</label>
+                        </div>
+                        <select class="custom-select" id="user">
+                          <option value="" disabled selected>Choose...</option>
+                        </select>
+                    </div>
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
                           <label class="input-group-text" for="property" >select property</label>
                         </div>
                         <select class="custom-select" id="property">
                           <option value="" disabled selected>Choose...</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
                         </select>
                     </div>
 
