--- a/public/index.html
+++ b/public/index.html
@@ -60,14 +60,14 @@
                 
                 <div class="col-lg-6 col-md-6 col-sm-12 blocks-about">
 
-                    <div class="input-group mb-3">
+                    <!-- <div class="input-group mb-3">
                         <div class="input-group-prepend">
                           <label class="input-group-text" for="user" >select user</label>
                         </div>
                         <select class="custom-select" id="user">
                           <option value="" disabled selected>Choose...</option>
                         </select>
-                    </div>
+                    </div> -->
 
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
