--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-        <script type="module" src="./main.js"></script>
-        <script src="./properties.json"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+		<script src="main.js"></script>
+
 
 		<title>Giovanna Bueno</title>
 	</head>
